炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄

XC_API int WINAPI XAdTree_InsertItemImageEx(HXCGUI hAdapter, const wchar_t* pName, HIMAGE hImage, int nParentID = XC_ID_ROOT, int insertID = XC_ID_LAST);

XC_API int WINAPI XAdTree_GetCount(HXCGUI hAdapter);

XC_API int WINAPI XAdTree_GetCountColumn(HXCGUI hAdapter);

XC_API BOOL WINAPI XAdTree_SetItemText(HXCGUI hAdapter, int nID, int iColumn, const wchar_t* pValue);

XC_API BOOL WINAPI XAdTree_SetItemTextEx(HXCGUI hAdapter, int nID, const wchar_t* pName, const wchar_t* pValue);

XC_API BOOL WINAPI XAdTree_SetItemImage(HXCGUI hAdapter, int nID, int iColumn, HIMAGE hImage);

XC_API BOOL WINAPI XAdTree_SetItemImageEx(HXCGUI hAdapter, int nID, const wchar_t* pName, HIMAGE hImage);

XC_API BOOL WINAPI XAdTree_GetItemText(HXCGUI hAdapter, int nID, int iColumn, out_ wchar_t* pOut, int nOutLen);

XC_API HIMAGE WINAPI XAdTree_GetItemImage(HXCGUI hAdapter, int nID, int iColumn);

XC_API BOOL WINAPI XAdTree_GetItemTextEx(HXCGUI hAdapter, int nID, const wchar_t* pName, out_ wchar_t* pOut, int nOutLen);

XC_API HIMAGE WINAPI XAdTree_GetItemImageEx(HXCGUI hAdapter, int nID, const wchar_t* pName);

XC_API BOOL WINAPI XAdTree_DeleteItem(HXCGUI hAdapter, int nID);

XC_API void WINAPI XAdTree_DeleteItemAll(HXCGUI hAdapter);

XC_API void WINAPI XAdTree_DeleteColumnAll(HXCGUI hAdapter);

XC_API HXCGUI WINAPI XAdMap_Create();

XC_API BOOL WINAPI XAdMap_AddItemText(HXCGUI hAdapter, const wchar_t* pName, const wchar_t* pValue);

XC_API BOOL WINAPI XAdMap_AddItemImage(HXCGUI hAdapter, const wchar_t* pName, HIMAGE hImage);

XC_API BOOL WINAPI XAdMap_DeleteItem(HXCGUI hAdapter, const wchar_t* pName);

XC_API int  WINAPI XAdMap_GetCount(HXCGUI hAdapter);

XC_API BOOL WINAPI XAdMap_GetItemText(HXCGUI hAdapter, const wchar_t* pName, out_ wchar_t* pOut, int nOutLen);

XC_API HIMAGE WINAPI XAdMap_GetItemImage(HXCGUI hAdapter, const wchar_t* pName);

XC_API BOOL WINAPI XAdMap_SetItemText(HXCGUI hAdapter, const wchar_t* pName, const wchar_t* pValue);

XC_API BOOL WINAPI XAdMap_SetItemImage(HXCGUI hAdapter, const wchar_t* pName, HIMAGE hImage);

XC_API void WINAPI _XC_DebugPrintf(int  level, const char *pFormat, ...);

XC_API void WINAPI _XC_DebugPrintfW(int  level, const wchar_t *pFormat, ...);

XC_API void WINAPI xtrace(const char *pFormat, ...);

XC_API void WINAPI xtracew(const wchar_t *pFormat, ...);

XC_API HDRAW WINAPI XDraw_Create(HDC hdc); //创建
XC_API void  WINAPI XDraw_Destroy(HDRAW hDraw); //销毁
XC_API void  WINAPI XDraw_SetOffset(HDRAW hDraw, int x, int y); //设置坐标偏移量
XC_API void  WINAPI XDraw_GetOffset(HDRAW hDraw, out_ int *pX, out_ int *pY); //获取坐标偏移量
XC_API void  WINAPI XDraw_RestoreGDIOBJ(HDRAW hDraw);  //还原状态,释放用户绑定的GDI对象
XC_API HDC   WINAPI XDraw_GetHDC(HDRAW hDraw);

XC_API void WINAPI XDraw_SetBrushColor(HDRAW hDraw, COLORREF color, BYTE alpha = 255);

XC_API void WINAPI XDraw_SetTextAlign(HDRAW hDraw, int nFlag);

XC_API void WINAPI XDraw_SetTextVertical(HDRAW hDraw, BOOL bVertical);

XC_API void WINAPI XDraw_SetFontX(HDRAW hDraw, HFONTX  hFontx);

XC_API void WINAPI XDraw_SetLineWidth(HDRAW hDraw, int nWidth);

XC_API int  WINAPI XDraw_SetBkMode(HDRAW hDraw, BOOL bTransparent);

XC_API void WINAPI XDraw_SetClipRect(HDRAW hDraw, RECT*  pRect);

XC_API void WINAPI XDraw_ClearClip(HDRAW hDraw);

XC_API void WINAPI XDraw_EnableSmoothingMode(HDRAW hDraw, BOOL  bEnable);   //启用平滑模式
XC_API HBRUSH WINAPI XDraw_CreateSolidBrush(HDRAW hDraw, COLORREF crColor);

XC_API HPEN WINAPI XDraw_CreatePen(HDRAW hDraw, int fnPenStyle, int nWidth, COLORREF crColor);

XC_API HRGN WINAPI XDraw_CreateRectRgn(HDRAW hDraw, int nLeftRect, int nTopRect, int nRightRect, int nBottomRect);

XC_API HRGN WINAPI XDraw_CreateRoundRectRgn(HDRAW hDraw, int nLeftRect, int nTopRect, int nRightRect, int nBottomRect, int nWidthEllipse, int nHeightEllipse);

XC_API HRGN WINAPI XDraw_CreatePolygonRgn(HDRAW hDraw, POINT *pPt, int cPoints, int fnPolyFillMode);

XC_API int WINAPI XDraw_SelectClipRgn(HDRAW hDraw, HRGN hRgn);

XC_API void WINAPI XDraw_FillRect(HDRAW hDraw, RECT *pRect);

XC_API void WINAPI XDraw_FillRectColor(HDRAW hDraw, RECT *pRect, COLORREF color, BYTE alpha = 255);

XC_API BOOL WINAPI XDraw_FillRgn(HDRAW hDraw, HRGN hrgn, HBRUSH hbr);

XC_API void WINAPI XDraw_FillEllipse(HDRAW hDraw, RECT *pRect);