炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XAdTree_InsertItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_InsertItemImageEx (int hAdapter,string pName,int hImage,int nParentID,int insertID);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_GetCount (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_GetCountColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_GetCountColumn (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_SetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_SetItemText (int hAdapter,int nID,int iColumn,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_SetItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_SetItemTextEx (int hAdapter,int nID,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_SetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_SetItemImage (int hAdapter,int nID,int iColumn,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_SetItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_SetItemImageEx (int hAdapter,int nID,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_GetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_GetItemText (int hAdapter,int nID,int iColumn,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_GetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_GetItemImage (int hAdapter,int nID,int iColumn);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_GetItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_GetItemTextEx (int hAdapter,int nID,string pName,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_GetItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_GetItemImageEx (int hAdapter,int nID,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTree_DeleteItem (int hAdapter,int nID);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_DeleteItemAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdTree_DeleteItemAll (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_DeleteColumnAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdTree_DeleteColumnAll (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdMap_Create ();

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdMap_AddItemText (int hAdapter,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdMap_AddItemImage (int hAdapter,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdMap_DeleteItem (int hAdapter,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdMap_GetCount (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_GetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdMap_GetItemText (int hAdapter,string pName,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_GetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdMap_GetItemImage (int hAdapter,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_SetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdMap_SetItemText (int hAdapter,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdMap_SetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdMap_SetItemImage (int hAdapter,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "_XC_DebugPrintf", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void _XC_DebugPrintf (int level,string pFormat,int 点点点);

		[DllImport("xcgui.dll", EntryPoint = "_XC_DebugPrintfW", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void _XC_DebugPrintfW (int level,string pFormat,int 点点点);

		[DllImport("xcgui.dll", EntryPoint = "xtrace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void xtrace (string pFormat,int 点点点);

		[DllImport("xcgui.dll", EntryPoint = "xtracew", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void xtracew (string pFormat,int 点点点);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_Create (int hdc);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_Destroy (int hDraw);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetOffset", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetOffset (int hDraw,int x,int y);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_GetOffset", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_GetOffset (int hDraw,int pX,int pY);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_RestoreGDIOBJ", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_RestoreGDIOBJ (int hDraw);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_GetHDC", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_GetHDC (int hDraw);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetBrushColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetBrushColor (int hDraw,int color,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetTextAlign (int hDraw,int nFlag);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetTextVertical", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetTextVertical (int hDraw,bool bVertical);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetFontX", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetFontX (int hDraw,int hFontx);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetLineWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetLineWidth (int hDraw,int nWidth);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetBkMode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_SetBkMode (int hDraw,bool bTransparent);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SetClipRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_SetClipRect (int hDraw,RECT pRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_ClearClip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_ClearClip (int hDraw);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_EnableSmoothingMode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_EnableSmoothingMode (int hDraw,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_CreateSolidBrush", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_CreateSolidBrush (int hDraw,int crColor);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_CreatePen", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_CreatePen (int hDraw,int fnPenStyle,int nWidth,int crColor);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_CreateRectRgn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_CreateRectRgn (int hDraw,int nLeftRect,int nTopRect,int nRightRect,int nBottomRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_CreateRoundRectRgn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_CreateRoundRectRgn (int hDraw,int nLeftRect,int nTopRect,int nRightRect,int nBottomRect,int nWidthEllipse,int nHeightEllipse);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_CreatePolygonRgn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_CreatePolygonRgn (int hDraw,POINT* pPt,int cPoints,int fnPolyFillMode);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_SelectClipRgn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XDraw_SelectClipRgn (int hDraw,int hRgn);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillRect (int hDraw,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillRectColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillRectColor (int hDraw,RECT* pRect,int color,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillRgn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XDraw_FillRgn (int hDraw,int hrgn,int hbr);

		[DllImport("xcgui.dll", EntryPoint = "XDraw_FillEllipse", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XDraw_FillEllipse (int hDraw,RECT* pRect);
